--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
   "version": "0.0.0",
   "description": "A web site for calculating missile defense probabilities.",
   "main": "src/js/index.js",
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "stage-2",
+            "react"
+          ]
+        }
+      ]
     ]
   },
   "eslintConfig": {
@@ -27,7 +35,7 @@
     "prepare": "mkdir -p dist/{js,css}",
     "static": "cp -R src/static/* dist/",
     "css": "lessc src/css/main.less > dist/css/main.css",
-    "js": "babel src/js -s -D -d dist/js",
+    "js": "browserify -d -e src/js/app.js | uglifyjs -c > dist/js/bundle.js",
     "build": "npm run prepare && npm run static && npm run css && npm run js",
     "clean": "rm -rf dist",
     "dev": "npm run prepare && watch \"npm run static\" src/static & watch \"npm run css\" src/css & watch \"npm run js\" src/js & http-server ./dist -p 9090",
@@ -45,20 +53,28 @@
   },
   "homepage": "https://github.com/jimjkelly/missile-defense#readme",
   "devDependencies": {
-    "babel-cli": "^6.16.0",
     "babel-jest": "^16.0.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-2": "^6.17.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
     "eslint": "^3.8.1",
     "http-server": "^0.9.0",
     "jest": "^16.0.2",
     "less": "^2.7.1",
     "react-test-renderer": "^15.3.2",
+    "uglify-js": "^2.7.3",
     "watch": "^1.0.1"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "lodash": "^4.16.4",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-map-gl": "^1.7.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "whatwg-fetch": "^1.0.0"
   }
 }
