Initial layer controls

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "prepare": "mkdir -p dist/{js,css}",
     "static": "cp -R src/static/* dist/",
     "css": "lessc src/css/main.less > dist/css/main.css",
-    "js": "browserify -d -e src/js/app.js | uglifyjs -c > dist/js/bundle.js",
+    "js": "browserify -d -e src/js/app.js -o dist/js/bundle.js",
+    "minify": "uglifyjs -o dist/js/bundle.js dist/js/bundle.js",
     "build": "npm run prepare && npm run static && npm run css && npm run js",
     "clean": "rm -rf dist",
     "dev": "npm run prepare && watch \"npm run static\" src/static & watch \"npm run css\" src/css & watch \"npm run js\" src/js & http-server ./dist -p 9090",
