--- a/circle.yml
+++ b/circle.yml
@@ -5,5 +5,19 @@ dependencies:
     - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
     - sudo apt-get update -qq
     - sudo apt-get install -y -qq yarn
+    - sudo pip install awscli
+    - yarn install
   cache_directories:
     - "~/.yarn-cache"
+  override:
+    - npm run build
+    - npm run minify
+test:
+  override:
+    - npm run lint
+    - npm run test
+deployment:
+  production:
+    branch: master
+    commands:
+        - aws s3 sync dist s3://missile-defense/ --region us-west-2
