--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-map-gl": "^1.7.0",
-    "react-redux": "^4.4.5",
+    "react-popover": "^0.4.4",
+    "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "svg-transform": "^0.0.3",
     "viewport-mercator-project": "^3.0.0-beta2"
