Generate Chart Showing Probability Given X Warheads
This adds a chart to the bottom showing the probability given
X warheads. There will need to be some more UI tweaks, but
wanted to get this up to look at it as is.

Relates to #10.

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
     "svg-transform": "^0.0.3",
+    "victory": "^0.15.0",
     "viewport-mercator-project": "^3.0.0-beta2"
   }
 }
