--- a/package.json
+++ b/package.json
@@ -90,16 +90,18 @@
     "watch": "^1.0.1"
   },
   "dependencies": {
+    "autobind-decorator": "^1.3.4",
     "d3-color": "^1.0.2",
     "debounce": "^1.0.0",
     "eslint-plugin-react": "^6.7.1",
     "immutable": "^3.8.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-map-gl": "^1.7.0",
+    "react-map-gl": "^2.0.1",
     "react-popover": "^0.4.4",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
+    "semantic-ui-react": "^0.64.4",
     "svg-transform": "^0.0.3",
     "victory": "^0.15.0",
     "viewport-mercator-project": "^3.0.0-beta2"
