--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
             "es2015",
             "stage-2",
             "react"
+          ],
+          "plugins": [
+            "transform-decorators-legacy"
           ]
         }
       ]
     ]
   },
   "eslintConfig": {
+    "parser": "babel-eslint",
     "extends": [
       "eslint:recommended",
       "plugin:react/recommended"
@@ -73,7 +77,9 @@
   },
   "homepage": "https://github.com/jimjkelly/missile-defense#readme",
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "babel-jest": "^17.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
